--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymleaf.org">
 <head>
     <title>My Products App</title>
 </head>
@@ -7,7 +7,8 @@
 <h1>KeyCloak Test</h1>
 <a href="/products">My products</a></body>
 
-<footer>
-    <a href=http://localhost:8082/auth/realms/ecom-app/account/ >Gérer mon compte</a>
-</footer>
+
+
+
+</body>
 </html>
