--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,11 @@
     <title>My Products App</title>
 </head>
 <body>
-<h1>KeyCloak Test</h1>
+<h1> This is the first  my first application using keycloak to secure data</h1>
 <a href="/products">My products</a></body>
 
-
+<footer>
+    <a href=http://localhost:8082/auth/realms/spring-boot/account/ >Gérer mon compte</a>
 
 
 </body>
