--- a/src/main/resources/templates/produsts.html
+++ b/src/main/resources/templates/produsts.html
@@ -4,11 +4,7 @@
     <title>My Products App</title>
 </head>
 <body>
-<h1>KeyCloak Test</h1>
-
-
-
-
+<h1> This is the first  my first application using keycloak to secure data</h1>
 <table>
 <tr>
 <th>ID</th><th>Name</th><th>Price</th>
